[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/enemy_blood_skeleton.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/BloodSkeleton.gd" type="Script" id=2]
[ext_resource path="res://objects/HitboxEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 13 ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "resurrect"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 12, 11, 12, 13, 12, 11, 12, 13, 12, 11, 12, 13, 12, 11, 10, 9, 8, 7 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.6229, 20.1512 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2, 7 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 9.32032, 20.1512 )

[node name="BloodSkeleton" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 8
script = ExtResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -0.589741, -20.5997 )
scale = Vector2( 0.376677, 0.607206 )
process_parent = true
physics_process_parent = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/resurrect = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="TimerHurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
__meta__ = {
"_editor_description_": "activado al ser herido, mientras esté activo no podrá ser herido

0.3"
}

[node name="TimerDead" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
__meta__ = {
"_editor_description_": "tiempo que permanece muerto, en timeout revivirá"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.44532, -20.2359 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -25 )
texture = ExtResource( 1 )
offset = Vector2( -2.68, 0 )
hframes = 15

[node name="AreaDetectNoFloor" type="Area2D" parent="Sprite"]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AreaDetectNoFloor"]
position = Vector2( -11, 32 )
shape = SubResource( 6 )

[node name="HitboxEnemy" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxEnemy"]
position = Vector2( -0.44532, -20.2359 )
shape = SubResource( 7 )

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerDead" to="." method="_on_TimerDead_timeout"]
[connection signal="body_exited" from="Sprite/AreaDetectNoFloor" to="." method="_on_AreaDetectNoFloor_body_exited"]
